fixed bug where placeholder text was unreadable on dark theme set by user on non dark theme browser

--- a/client/src/components/descriptionTextBox/descriptionTextBox.css
+++ b/client/src/components/descriptionTextBox/descriptionTextBox.css
@@ -4,6 +4,9 @@
 }
 
 
+.description-text-box textarea::placeholder{
+    color: var(--color-text-light);
+}
 .description-text-box textarea {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
