--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,15 +13,15 @@
 
 @media(prefers-color-scheme: dark) {
   :root {
-    --color-bg: var(--bkg2-dark);
+    --color-bg: hsl(218, 15.4%, 10.2%);
     --color-logo: #17953d;
-    --color-accent: var(--accent1-dark);
-    --color-text-light: var(--text-dark);
+    --color-accent: hsl(152, 100%, 31%);
+    --color-text-light: rgb(173, 184, 201);
     --color-logo-text: #f6f6f6;
-    --color-navbar-background: var(--bkg1-dark);
+    --color-navbar-background: hsl(218, 15.4%, 10.2%);
     --color-navbar-search-input: #6e6e6e;
     --color-navbar-search-text: #e4fdec;
-    --color-white: var(--bkg1-dark);
+    --color-white: hsl(218, 15.4%, 10.2%);
     --color-black: white;
     --color-light: rgb(66, 73, 87);
     --card-shadow: rgba(255, 255, 255, 0.15) 2px 2px 5px 2px, rgba(255, 255, 255, 0.05) 1px 1px 1px 1px;
